syntax = "proto3";

import "google/protobuf/timestamp.proto";

package product;

service ProductService {
  rpc SearchProduct (SearchProductDto) returns (ProductsResponseMessage) {}
  rpc FindProductById (FindProductByIdDto) returns (ProductResponseMessage) {}
  rpc CreateProduct (CreateProductDto) returns (ProductResponseMessage) {}
  rpc UpdateProduct (UpdateProductDto) returns (ProductResponseMessage) {}
  rpc OrderRequest (OrderRequestDto) returns (ProductResponseMessage) {}
  rpc RemoveProduct (FindProductByIdDto) returns (ProductResponseMessage) {}
}

message ProductResponseMessage {
  int32 code = 1;
  optional string message = 2;
  optional Product product = 3;
}

message ProductsResponseMessage {
  int32 code = 1;
  optional string message = 2;
  repeated Product products = 3;
}

message FindProductByIdDto {
  string id = 1;
}

message SearchProductDto {
  optional string name = 1;  
  optional string category = 2;
  optional string make = 3;
  optional string description = 4;
  optional float minPrice = 5;
  optional float maxPrice = 6;
  optional int32 quantity = 7;

}

message CreateProductDto {
  string name = 1;
  optional string category = 3;
  string make = 4;
  optional string description = 5;
  float price = 6;
  int32 quantity = 2;
}

message UpdateProductDto {
  string id = 1;
  optional string name = 2;
  optional string category = 3;
  optional string make = 4;  
  optional string description = 5;
  optional float price = 6;
  optional int32 quantity = 7;
}

message OrderRequestDto {
  string product_id = 1;
  int32 quantity = 2;
}

message Product {
  string id = 1;
  string name = 2;
  optional string category = 3;
  string make = 4;
  optional string description = 5;
  float price = 6;
  int32 quantity = 7;
  google.protobuf.Timestamp createdAt = 8;
  optional google.protobuf.Timestamp deletedAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
}

message Products {
  repeated Product products = 1;
}